src/_html/rpc.css
html,body{
    position: relative;
    margin: 0;
    height: 100%;
    font-family: Helvetica Neue, sans-serif;
    overflow: visible;
    overscroll-behavior: auto;
}
* {
    -webkit-tap-highlight-color: transparent;
}
body{
    display: flex;
    flex-direction: column;
}

label{
    margin: 8px;
    position: relative;
    display: flex;
    flex-direction: column;
    font-size: 16px;
}
input{
    border: 1px solid #999;
    padding: 2px 8px;
    font: inherit;
    outline: none;
    background: #f9f9f9;
    position: relative;
    border-radius: 4px;
}
input:focus{
    background: #fff;
}
.autocomplete{
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    background: #eee;
    box-shadow: 0 0 2px 2px rgba(0, 0, 0, 0.15);
    padding-top: 24px;
    border-radius: 4px;
}
.autocomplete>*{
    padding: 2px 4px;
    cursor: pointer;
    user-select: none;
    white-space: pre;
}
.autocomplete>*+*{
    border-top: 1px solid #999;
}
.autocomplete>.active{
    background-color: #aaa;
}

.buttonbar{
    display: flex;
    margin: 0 8px;
	flex-wrap: wrap;
	gap: 4px;
}
.buttonbar>*{
    border-radius: 14px;
    padding: 4px 8px;
    border: 1px solid black;
    color: #333;
    background-color: lightgray;
}
.buttonbar>:not(.status){
    cursor: pointer;
    user-select: none;
}
.buttonbar>:not(.status):active,.buttonbar>:not(.status).pressed{
	background-color: #e2e2e2;
}
.status{
    margin-left: auto;
}

pre{
    margin: 8px;
    padding: 8px;
    border-radius: 8px;
    tab-size: 4;
	overflow: auto;
	scrollbar-width: thin;
	scrollbar-color: green transparent;
}


@media (prefers-color-scheme: dark) {
	body {
		color-scheme: dark;
		background-color: #202020;
		color: white;
	}
	input{
		background-color: #161616;
		color: inherit;
		border-color: #666;
		box-shadow: 0 0 2px 2px rgba(255,255,255, 0.15);
	}
	input:focus{
		background-color: #000;
	}
	.buttonbar>*{
		color: white;
		border-color: #999;
		background-color: #333;
	}
	.buttonbar>.status{
		border-color: #666;
	}
	.buttonbar>:not(.status):active,.buttonbar>:not(.status).pressed{
		background-color: #000;
	}
}

